[Update] Overflow-y to stop page movement

--- a/src/styles.css
+++ b/src/styles.css
@@ -100,8 +100,13 @@ nav,
 section {
   display: block;
 }
+html {
+  overflow-y: scroll;
+}
 body {
   line-height: 1;
+  height: 100%;
+  background-color: rgb(245, 245, 245);
 }
 ol,
 ul {
@@ -121,11 +126,6 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}
-
-body {
-  height: 100%;
-  background-color: rgb(245, 245, 245);
 }
 
 a {
